fix(CoverImage): Fix alignment of image:

--- a/src/components/screens/Upload/styles.less
+++ b/src/components/screens/Upload/styles.less
@@ -80,6 +80,9 @@
     border-radius: 43px;
   }
   .imageContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 15px 68px;
   }
   .imageContent > span {
@@ -96,6 +99,7 @@
   border-radius: 43px;
   background: none !important;
   min-width: 280px;
+  padding: 0 58px;
 }
 .ant-upload:hover,
 .ant-upload.ant-upload-drag.ant-upload-drag-hover {
